Fix height issue on IOS , height must take up 100% of the viewport

--- a/public/css/_account.scss
+++ b/public/css/_account.scss
@@ -2,7 +2,7 @@
 
 #accountPage{
     padding:20px 20px 80px 20px;
-    height:100vh;
+    min-height:100vh;
 
     .container{
         width:100%;
