--- a/public/css/_register.scss
+++ b/public/css/_register.scss
@@ -2,7 +2,7 @@
 
 .register{
     width:100%;
-    height:100vh;
+    min-height:100vh;
     background-image: url('/images/darkKnightTextLess.jpeg');
     background-size:cover;
     background-repeat: no-repeat;
