--- a/public/css/_selectedMovie.scss
+++ b/public/css/_selectedMovie.scss
@@ -2,7 +2,7 @@
 
 #moviePage{
     width: 100%;
-    height:100vh;
+    min-height:100vh;
 
     img{
         max-width: 100%;
