--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -175,7 +175,7 @@ footer{
 
 #searchPage{
     padding-bottom:70px;
-    height:100vh;
+    min-height:100vh;
 }
 
 #searchContainer{
